--- a/boulder_project/boulder_project/templates/home.html
+++ b/boulder_project/boulder_project/templates/home.html
@@ -1,20 +1,21 @@
-{% load static%}
-<!Doctype  HTML>
+{% load static %}
+
+<!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="static/home_css.css">
-    <link rel="shortcut icon" type ="image/x-icon" href="static/boulder_icon.ico">
+    <link rel="stylesheet" href="{% static 'home_css.css' %}">
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'boulder_icon.ico' %}">
 </head>
 
 <body>
     <!-- Barre de navigation Bootstrap -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="/"><img src="static/boulder_logo.png" alt="boulder logo" class="logo-img"></a>
+            <a class="navbar-brand" href="/"><img src="{% static 'boulder_logo.png' %}" alt="boulder logo" class="logo-img"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -26,6 +27,11 @@
                         <li class="nav-item">
                             <span class="nav-link">Bienvenue, {{ user.username }}</span>
                         </li>
+                        <!-- Bouton pour ouvrir la modale d'ajout de post -->
+                        <li class="nav-item">
+                            <img src="{% static 'new_post_ico3.png' %}" alt="Nouveau Post" class="custom_img1" data-bs-toggle="modal" data-bs-target="#addPostModal" style="width: 80px; position: absolute; right: 5%; top: 5%">
+                        </li>
+                        
                     {% else %}
                         <!-- Si l'utilisateur n'est pas connecté, affichez un lien vers la page de connexion -->
                         <li class="nav-item">
@@ -36,7 +42,44 @@
             </div>
         </div>
     </nav>
-    <img src="media/night-shire.png" alt="shire">
+
+    <!-- Modale d'ajout de post -->
+    <div class="modal fade" id="addPostModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Ajouter un post</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <!-- Formulaire pour ajouter un nouveau post (image ou texte) -->
+                    <form method="post" enctype="multipart/form-data" action="{% url 'upload_media' %}">
+                        {% csrf_token %}
+                        <div class="mb-3">
+                            <label for="media-title" class="form-label">Titre :</label>
+                            <input type="text" class="form-control" id="media-title" name="title" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="media-file" class="form-label">Fichier :</label>
+                            <input type="file" class="form-control" id="media-file" name="file" accept="image/*" required>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Envoyer</button>
+                    </form>
+                    <hr> <!-- Ajoutez une ligne de séparation entre les deux formulaires -->
+                    <!-- Formulaire pour ajouter un nouveau texte -->
+                    <form method="post" action="{% url 'home' %}">
+                        {% csrf_token %}
+                        <div class="mb-3">
+                            <label for="text-post-content" class="form-label">Contenu :</label>
+                            <textarea class="form-control" id="text-post-content" name="content" rows="4" required></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Publier</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="container mt-5">
         <div class="row">
             {% for media in media_list %}
@@ -60,46 +103,6 @@
                     </div>
                 </div>
             {%endfor%}
-                        <!-- Formulaire pour uploader une nouvelle image -->
-        {% if user.is_authenticated %}
-        <div class="col-lg-4 mb-4">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Uploader un nouveau média</h5>
-                    <form method="post" enctype="multipart/form-data" action="{% url 'upload_media' %}">
-                        {% csrf_token %}
-                        <div class="mb-3">
-                            <label for="media-title" class="form-label">Titre :</label>
-                            <input type="text" class="form-control" id="media-title" name="title" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="media-file" class="form-label">Fichier :</label>
-                            <input type="file" class="form-control" id="media-file" name="file" accept="image/*" required>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Envoyer</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-4 mb-4">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Publier un nouveau texte</h5>
-                    <form method="post" action="{% url 'home' %}">
-                        {% csrf_token %}
-                        <div class="mb-3">
-                            <label for="text-post-content" class="form-label">Contenu :</label>
-                            <textarea class="form-control" id="text-post-content" name="content" rows="4" required></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Publier</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-
-        {% endif %} 
-        </div>
-    </div>
 
     <!-- Ajoutez les liens vers les fichiers JavaScript Bootstrap ici -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
