--- a/boulder_project/boulder_project/templates/home.html
+++ b/boulder_project/boulder_project/templates/home.html
@@ -23,11 +23,15 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     {% if user.is_authenticated %}
-                        <!-- Si l'utilisateur est connecté, affichez le nom d'utilisateur -->
+               
                         <li class="nav-item">
                             <span class="nav-link">Bienvenue, {{ user.username }}</span>
                         </li>
-                        <!-- Bouton pour ouvrir la modale d'ajout de post -->
+                        <form method="post" action="{% url 'logout' %}" class="d-inline">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-danger">Déconnexion</button>
+                        </form>
+
                         <li class="nav-item">
                             <img src="{% static 'new_post_ico3.png' %}" alt="Nouveau Post" class="custom_img1" data-bs-toggle="modal" data-bs-target="#addPostModal" style="width: 80px; position: absolute; right: 5%; top: 5%">
                         </li>
@@ -85,10 +89,19 @@
             {% for media in media_list %}
                 <div class="col-lg-4 mb-4">
                     <div class="card">
-                        <img src="{{ media.file.url}}" class="card-img-top" alt="{{ media.title }}">
+                        {% if media.file.url|lower|slice:"-3" == "mp4" %}
+                            <video controls class="card-img-top" alt="{{ media.title }}">
+                                <source src="{{ media.file.url }}" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
+                        {% else %}
+                            <img src="{{ media.file.url }}" class="card-img-top" alt="{{ media.title }}">
+                        {% endif %}
                         <div class="card-body">
                             <h5 class="card-title">{{ media.title }}</h5>
-                            <!-- Vous pouvez ajouter d'autres informations ici, comme la description, les likes, etc. -->
+                            <p class="card-date"> {{ media.date}}</p>
+                            <p class="card-author">{{ media.author}} </p>
+                            <!-- Other information about the media file -->
                         </div>
                     </div>
                 </div>
@@ -102,7 +115,10 @@
                         </div>
                     </div>
                 </div>
-            {%endfor%}
+            {% endfor %}
+        </div>
+    </div>
+
 
     <!-- Ajoutez les liens vers les fichiers JavaScript Bootstrap ici -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
