--- a/boulder_project/boulder_project/templates/login.html
+++ b/boulder_project/boulder_project/templates/login.html
@@ -1,4 +1,10 @@
-<!-- login.html -->
+{% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+{% endif %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
