--- a/boulder_project/boulder_project/templates/register.html
+++ b/boulder_project/boulder_project/templates/register.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <h1>Inscription</h1>
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">S'enregistrer</button>
+        <button type="submit">Register</button>
     </form>
+    
 </body>
 </html>
