--- a/boulder_project/boulder_project/templates/home.html
+++ b/boulder_project/boulder_project/templates/home.html
@@ -2,7 +2,15 @@
 
 <!DOCTYPE html>
 <html>
-
+<style>
+    .card{
+        height:100%
+    }
+    .card img{
+        height:500px;
+        object-fit: cover;
+    }
+</style>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
