--- a/boulder_project/boulder_project/templates/registration/login.html
+++ b/boulder_project/boulder_project/templates/registration/login.html
@@ -1,3 +1,4 @@
+{%load static%}
 {% if messages %}
     <ul class="messages">
         {% for message in messages %}
@@ -11,15 +12,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connexion</title>
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'boulder_icon.ico' %}">
+</head>
 </head>
 <body>
     <h1>Page de Connexion</h1>
     <form method="post" action="{% url 'login' %}">
         {% csrf_token %}
-        <label for="username">Nom d'utilisateur :</label>
-        <input type="text" id="username" name="username" required><br><br>
-        <label for="password">Mot de passe :</label>
-        <input type="password" id="password" name="password" required><br><br>
+        {{form.as_p}}
         <button type="submit">Se connecter</button>
     </form>
     <p> Pas encore inscrit ? <a href="/register/">S'enregistrer</a></p>
