--- a/boulder_project/boulder_project/templates/registration/register.html
+++ b/boulder_project/boulder_project/templates/registration/register.html
@@ -13,6 +13,9 @@
         {{ form.as_p }}
         <button type="submit">Register</button>
     </form>
+    {% if error_message%}
+    <p>{{% error_message %}}</p>
+    {% endif%}
     
 </body>
 </html>
